# moulizneel

./: .eslintrc  .gitignore  CMakeLists.txt  README.md  c00.cc  c00.h  package-lock.json  package.json
src/: index.ts  types.ts
src/commands/: check.ts
src/exercises/: c00.ts  c01.ts  index.ts
src/helpers/: compiler.ts
test/: compiler.test.ts
test/helpers/: init.js
